# puppet-placement

./: .gitreview  .zuul.yaml  CONTRIBUTING.rst  README.md  metadata.json  setup.cfg
examples/: init.pp
manifests/: api.pp  client.pp  config.pp  cors.pp  db.pp  deps.pp  generic_service.pp  init.pp  logging.pp  params.pp  policy.pp
manifests/db/: mysql.pp  postgresql.pp  sync.pp
manifests/keystone/: auth.pp  authtoken.pp
manifests/wsgi/: apache.pp  uwsgi.pp
releasenotes/notes/: add-allocation_conflict_retry_count-9946b772f98e294a.yaml  add-randomize_allocation_candidates-8421343af6c5f452.yaml  add_watch_log_file-option-823e212cc1a0f4ca.yaml  allocation_candidates_generation_strategy-8fc2fd6bb32b0292.yaml  apache-access_log_env_var-f2745610aeaff7e6.yaml  apache-headers-a3e1b9362f45de8f.yaml  api-enable_proxy_headers_parsing-a4ed4b03a8277030.yaml  configure_service-ac32ead265b7da2e.yaml  cors-32d7aada2d1a6a11.yaml  custom_wsgi_process_options-dad72a9b93b6f4d1.yaml  database_connection_recycle_time-10b4ac5f7a8c63c1.yaml  deprecate-watch_log_file-33488fd84df9225a.yaml  disable-apache-ssl-0b433f8e816cd81f.yaml  ensure_package-56da649251599096.yaml  fix-inconsistent-wsgi-apache-params-e75b34d360fee85a.yaml  generic-config-class-85daf5c44f226272.yaml  keystone-authtoken-service_type-52bea1bbea03c77e.yaml  keystone_authtoken-service_token_roles-342a535a433575e8.yaml  keystone_authtoken_interface-4537941bc250a05d.yaml  osc-placement-c9df6c2ce40537d0.yaml  oslo_policy-enforce_scope-774e0c5ecd0f04b3.yaml  placement-api-cleanup-9b7e14ea06e10e6f.yaml  (+21 more)
spec/: spec_helper.rb
(+34 files in other folders)
